--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,14 @@
-name: Deploy SvelteKit Portfolio to GitHub Pages
-
+name: Deploy Vite Project to GitHub Pages
 on:
   push:
     branches: [main]
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
@@ -22,36 +19,35 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'npm'
-
+      
       - name: Setup Pages
         uses: actions/configure-pages@v4
-
+        
       - name: Install dependencies
         run: npm ci
-
+        
       - name: Build site
         env:
-          BASE_PATH: '/SolarSystem'
-        run: |
-          npm run build
-          touch build/.nojekyll
-
-      # Check the build directory content
-      - name: List build directory
-        run: ls -la build
-
-      # Package the build directory properly for Pages
+          BASE_PATH: '/portfolio'
+        run: npm run build
+          
+      - name: Create .nojekyll file
+        run: touch dist/.nojekyll
+          
+      - name: List build directory content
+        run: ls -la dist
+          
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'build'
-
+          path: 'dist'
+          
   deploy:
     environment:
       name: github-pages
